[gd_scene format=3 uid="uid://cbapch2i6wj85"]

[ext_resource type="Script" uid="uid://dr7qvhmkfwp6n" path="res://instruction_popup/instructions_popup.gd" id="1_wh1u0"]
[ext_resource type="FontFile" uid="uid://c71ffh8gr5lss" path="res://assets/font/Leander.ttf" id="2_rxfbv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wh1u0"]
bg_color = Color(0.25, 0.16666667, 0, 1)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(1, 0.6666667, 0, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rxfbv"]
content_margin_left = 8.0
content_margin_top = 4.0
content_margin_right = 8.0
content_margin_bottom = 4.0
bg_color = Color(1, 0.6666667, 0, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_amu3g"]
content_margin_left = 8.0
content_margin_top = 4.0
content_margin_right = 8.0
content_margin_bottom = 4.0
bg_color = Color(1, 0.6666667, 0, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5nljw"]
content_margin_left = 8.0
content_margin_top = 4.0
content_margin_right = 8.0
content_margin_bottom = 4.0
bg_color = Color(1, 0.6666667, 0, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bm4pm"]
content_margin_left = 8.0
content_margin_top = 4.0
content_margin_right = 8.0
content_margin_bottom = 4.0
bg_color = Color(1, 0.6666667, 0, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ssf4a"]
content_margin_left = 8.0
content_margin_top = 4.0
content_margin_right = 8.0
content_margin_bottom = 4.0
bg_color = Color(1, 0.6666667, 0, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[node name="InstructionsPopup" type="Node" unique_id=679777576]
script = ExtResource("1_wh1u0")

[node name="PopupPanel" type="PopupPanel" parent="." unique_id=225541923]
disable_3d = true
oversampling_override = 1.0
title = "Abandonned Feature"
position = Vector2i(32, 32)
size = Vector2i(340, 314)
visible = true
always_on_top = true
theme_override_styles/panel = SubResource("StyleBoxFlat_wh1u0")

[node name="MarginContainer" type="MarginContainer" parent="PopupPanel" unique_id=593651165]
offset_left = 8.0
offset_top = 8.0
offset_right = 332.0
offset_bottom = 306.0
size_flags_vertical = 6
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="PopupPanel/MarginContainer" unique_id=1002615989]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="PopupPanel/MarginContainer/VBoxContainer" unique_id=1054610169]
custom_minimum_size = Vector2(256, 128)
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/default_color = Color(1, 0.8333334, 0.5, 1)
theme_override_fonts/normal_font = ExtResource("2_rxfbv")
bbcode_enabled = true
text = "Hi ! The devs gave up on this feature.
But I'm happy you found me ! 

You can still use the buttons bellow to [b]load a level[/b].

Press [b]TAB[/b] to hide me !"
fit_content = true
scroll_active = false
autowrap_mode = 2

[node name="Spacing" type="Control" parent="PopupPanel/MarginContainer/VBoxContainer" unique_id=305955388]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="Label" type="Label" parent="PopupPanel/MarginContainer/VBoxContainer" unique_id=910981755]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8352941, 0.5019608, 1)
theme_override_fonts/font = ExtResource("2_rxfbv")
text = "Load a level :"

[node name="HBoxContainer" type="HBoxContainer" parent="PopupPanel/MarginContainer/VBoxContainer" unique_id=348810360]
layout_mode = 2
alignment = 1

[node name="ButtonSpring" type="Button" parent="PopupPanel/MarginContainer/VBoxContainer/HBoxContainer" unique_id=1584321012]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.2509804, 0.16470589, 0, 1)
theme_override_colors/font_focus_color = Color(0.2509804, 0.16470589, 0, 1)
theme_override_colors/font_pressed_color = Color(0.2509804, 0.16470589, 0, 1)
theme_override_colors/font_hover_color = Color(0.2509804, 0.16470589, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0.2509804, 0.16470589, 0, 1)
theme_override_colors/font_disabled_color = Color(0.2509804, 0.16470589, 0, 1)
theme_override_colors/font_outline_color = Color(0.2509804, 0.16470589, 0, 1)
theme_override_colors/icon_normal_color = Color(0.2509804, 0.16470589, 0, 1)
theme_override_colors/icon_focus_color = Color(0.2509804, 0.16470589, 0, 1)
theme_override_colors/icon_pressed_color = Color(0.2509804, 0.16470589, 0, 1)
theme_override_colors/icon_hover_color = Color(0.2509804, 0.16470589, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0.2509804, 0.16470589, 0, 1)
theme_override_colors/icon_disabled_color = Color(0.2509804, 0.16470589, 0, 1)
theme_override_fonts/font = ExtResource("2_rxfbv")
theme_override_styles/normal = SubResource("StyleBoxFlat_rxfbv")
theme_override_styles/pressed = SubResource("StyleBoxFlat_amu3g")
theme_override_styles/hover = SubResource("StyleBoxFlat_5nljw")
theme_override_styles/disabled = SubResource("StyleBoxFlat_bm4pm")
theme_override_styles/focus = SubResource("StyleBoxFlat_ssf4a")
text = "Spring"

[node name="ButtonSummer" type="Button" parent="PopupPanel/MarginContainer/VBoxContainer/HBoxContainer" unique_id=424792192]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.2509804, 0.16470589, 0, 1)
theme_override_colors/font_focus_color = Color(0.2509804, 0.16470589, 0, 1)
theme_override_colors/font_pressed_color = Color(0.2509804, 0.16470589, 0, 1)
theme_override_colors/font_hover_color = Color(0.2509804, 0.16470589, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0.2509804, 0.16470589, 0, 1)
theme_override_colors/font_disabled_color = Color(0.2509804, 0.16470589, 0, 1)
theme_override_colors/font_outline_color = Color(0.2509804, 0.16470589, 0, 1)
theme_override_colors/icon_normal_color = Color(0.2509804, 0.16470589, 0, 1)
theme_override_colors/icon_focus_color = Color(0.2509804, 0.16470589, 0, 1)
theme_override_colors/icon_pressed_color = Color(0.2509804, 0.16470589, 0, 1)
theme_override_colors/icon_hover_color = Color(0.2509804, 0.16470589, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0.2509804, 0.16470589, 0, 1)
theme_override_colors/icon_disabled_color = Color(0.2509804, 0.16470589, 0, 1)
theme_override_fonts/font = ExtResource("2_rxfbv")
theme_override_styles/normal = SubResource("StyleBoxFlat_rxfbv")
theme_override_styles/pressed = SubResource("StyleBoxFlat_amu3g")
theme_override_styles/hover = SubResource("StyleBoxFlat_5nljw")
theme_override_styles/disabled = SubResource("StyleBoxFlat_bm4pm")
theme_override_styles/focus = SubResource("StyleBoxFlat_ssf4a")
text = "Summer"

[node name="ButtonAutumn" type="Button" parent="PopupPanel/MarginContainer/VBoxContainer/HBoxContainer" unique_id=965250946]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.2509804, 0.16470589, 0, 1)
theme_override_colors/font_focus_color = Color(0.2509804, 0.16470589, 0, 1)
theme_override_colors/font_pressed_color = Color(0.2509804, 0.16470589, 0, 1)
theme_override_colors/font_hover_color = Color(0.2509804, 0.16470589, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0.2509804, 0.16470589, 0, 1)
theme_override_colors/font_disabled_color = Color(0.2509804, 0.16470589, 0, 1)
theme_override_colors/font_outline_color = Color(0.2509804, 0.16470589, 0, 1)
theme_override_colors/icon_normal_color = Color(0.2509804, 0.16470589, 0, 1)
theme_override_colors/icon_focus_color = Color(0.2509804, 0.16470589, 0, 1)
theme_override_colors/icon_pressed_color = Color(0.2509804, 0.16470589, 0, 1)
theme_override_colors/icon_hover_color = Color(0.2509804, 0.16470589, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0.2509804, 0.16470589, 0, 1)
theme_override_colors/icon_disabled_color = Color(0.2509804, 0.16470589, 0, 1)
theme_override_fonts/font = ExtResource("2_rxfbv")
theme_override_styles/normal = SubResource("StyleBoxFlat_rxfbv")
theme_override_styles/pressed = SubResource("StyleBoxFlat_amu3g")
theme_override_styles/hover = SubResource("StyleBoxFlat_5nljw")
theme_override_styles/disabled = SubResource("StyleBoxFlat_bm4pm")
theme_override_styles/focus = SubResource("StyleBoxFlat_ssf4a")
text = "Autumn"

[node name="ButtonWinter" type="Button" parent="PopupPanel/MarginContainer/VBoxContainer/HBoxContainer" unique_id=340429735]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.2509804, 0.16470589, 0, 1)
theme_override_colors/font_focus_color = Color(0.2509804, 0.16470589, 0, 1)
theme_override_colors/font_pressed_color = Color(0.2509804, 0.16470589, 0, 1)
theme_override_colors/font_hover_color = Color(0.2509804, 0.16470589, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0.2509804, 0.16470589, 0, 1)
theme_override_colors/font_disabled_color = Color(0.2509804, 0.16470589, 0, 1)
theme_override_colors/font_outline_color = Color(0.2509804, 0.16470589, 0, 1)
theme_override_colors/icon_normal_color = Color(0.2509804, 0.16470589, 0, 1)
theme_override_colors/icon_focus_color = Color(0.2509804, 0.16470589, 0, 1)
theme_override_colors/icon_pressed_color = Color(0.2509804, 0.16470589, 0, 1)
theme_override_colors/icon_hover_color = Color(0.2509804, 0.16470589, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0.2509804, 0.16470589, 0, 1)
theme_override_colors/icon_disabled_color = Color(0.2509804, 0.16470589, 0, 1)
theme_override_fonts/font = ExtResource("2_rxfbv")
theme_override_styles/normal = SubResource("StyleBoxFlat_rxfbv")
theme_override_styles/pressed = SubResource("StyleBoxFlat_amu3g")
theme_override_styles/hover = SubResource("StyleBoxFlat_5nljw")
theme_override_styles/disabled = SubResource("StyleBoxFlat_bm4pm")
theme_override_styles/focus = SubResource("StyleBoxFlat_ssf4a")
text = "Winter"

[connection signal="popup_hide" from="PopupPanel" to="." method="_on_popup_panel_popup_hide"]
[connection signal="pressed" from="PopupPanel/MarginContainer/VBoxContainer/HBoxContainer/ButtonSpring" to="." method="_on_button_spring_pressed"]
[connection signal="pressed" from="PopupPanel/MarginContainer/VBoxContainer/HBoxContainer/ButtonSummer" to="." method="_on_button_summer_pressed"]
[connection signal="pressed" from="PopupPanel/MarginContainer/VBoxContainer/HBoxContainer/ButtonAutumn" to="." method="_on_button_autumn_pressed"]
[connection signal="pressed" from="PopupPanel/MarginContainer/VBoxContainer/HBoxContainer/ButtonWinter" to="." method="_on_button_winter_pressed"]
